 wrapper_gen.py            Locally Modified          571 

Directory modules/leap/build-support/project
 project-hybrid-main.bsv   Locally Modified          571 

Directory modules/leap/libraries/librl/base
 fifo-merge.bsv            Locally Modified          571 
 fifo-bypass.bsv           Locally Added               0 
 librl-bsv-base.awb        Locally Modified          571 


Added support for Bluespec's 2014.05 compiler release. Cheifly,
Bluespec semantically changed the BypassFIFO interface.  Added an
implementation to preserve the old semantics, and fixed LEAP code to
use this implementation. 

Simplified wrapper_gen -- we will not be supporting clocks_from_clocks
instantiations moving forward.

----------
mcadler     Date: Tue Jun  3 16:44:32 EDT 2014  CSN: CSN-leap-573
                  Tue Jun  3 20:44:32 UTC 2014


Directory modules/leap/build-support/build-pipelines/stages/software
 software.py               Locally Modified          572 

Directory modules/leap/build-support/build-pipelines/stages/iface
 iface.py                  Locally Modified          572 

- The SCons version of Python and the shell version may be different.  The old
  software.py assumed they were the same, leading to m5 builds that would not
  load.

- Create iface/build/include/.bsc directory so Bluespec won't complain that
  it doesn't exist.  Easier to make the empty directory than add an exception
  that it won't have a .bsc directory.

----------
mcadler     Date: Tue Jun  3 23:42:54 EDT 2014  CSN: CSN-leap-574
                  Wed Jun  4 03:42:54 UTC 2014


Directory modules/leap/virtual-platform/low-level-platform-interface/local-mem
 local-mem-ddr-wide.bsv    Locally Modified          573 

Directory modules/leap/libraries/librl/base
 fifo-merge.bsv            Locally Modified          573 
 fifo-bypass.bsv           Locally Removed           573 
 librl-bsv-base.awb        Locally Modified          573 

Go back to stock (new) BypassFIFOF.